# ghback/api/urls.py
@@ -13,6 +13,10 @@ urlpatterns = [
     path('account', views.account, name='account'),
     path('account/<int:id>/delete', views.delete_account,
          name='delete_account'),
+    path('account/<int:id>/password', views.change_password,
+         name='change_password'),
+    path('password', views.change_password_v2,
+         name='change_password_v2'),
     path('parser', views.parser, name='parser'),
     path('categories', views.categories_list, name='categories_list'),
     path('queries/top', views.queries_top, name='queries_top'),
